--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
             - "8080:8080"
         environment:
             - outputs_directory= ""
+            - fooocus_ip= "127.0.0.1:7865"
  
