--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
         ports:
             - "8080:8080"
         environment:
-            - outputs_directory= ""
-            - fooocus_ip= "127.0.0.1:7865"
+            - outputs_directory=
+            - fooocus_ip=127.0.0.1:7865
  
